[metadata]
t-houssian:
name = fillpdf
version = 0.7.2
author = Tyler Houssian
author_email = tylerhoussian@gmail.com
description = A Library to fill and flatten pdfs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/t-houssian/fillpdf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = importlib-metadata
packages = find:
python_requires = >=3.6
[options.entry_points]
console_scripts =
    extractfillpdf = fillpdf.extractfillpdf:run
    insertfillpdf = fillpdf.insertfillpdf:run